syntax = "proto3";

package user;

option go_package = "github.com/protocolbuffers/protobuf/examples/go/user";

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

service UserService {
    rpc AddUser(User) returns (User);
    rpc GetUser(User) returns (User);
    rpc ListUsers(Empty) returns (stream User);
}

message Empty {}
